--- a/app/src/main/res/layout/activity_tela_configuracao.xml
+++ b/app/src/main/res/layout/activity_tela_configuracao.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#eee"
     android:layout_height="match_parent"
-    tools:context=".TelaConfiguracao">
+    tools:context=".ui.TelaConfiguracao">
 
 <ScrollView
     android:layout_width="match_parent"
@@ -57,6 +57,7 @@
                     android:layout_height="wrap_content"
                     android:text="km/h (quilometro por hora)"
                     android:onClick="onRadioSelect"
+                    android:button="@drawable/background_radiobutton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -66,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:text="m/s (metros por segundo)"
                     android:onClick="onRadioSelect"
+                    android:button="@drawable/background_radiobutton"
                     app:layout_constraintStart_toEndOf="@+id/radio_masc"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -113,6 +115,7 @@
                     android:layout_height="wrap_content"
                     android:text="Caminhada"
                     android:onClick="onRadioSelect"
+                    android:button="@drawable/background_radiobutton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -122,6 +125,7 @@
                     android:layout_height="wrap_content"
                     android:text="Corrida"
                     android:onClick="onRadioSelect"
+                    android:button="@drawable/background_radiobutton"
                     app:layout_constraintStart_toEndOf="@+id/radio_masc"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
                 <RadioButton
@@ -130,6 +134,7 @@
                     android:layout_height="wrap_content"
                     android:text="Bicicleta"
                     android:onClick="onRadioSelect"
+                    android:button="@drawable/background_radiobutton"
                     app:layout_constraintStart_toEndOf="@+id/radio_masc"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -177,6 +182,7 @@
                         android:layout_height="wrap_content"
                         android:text="Nenhuma"
                         android:onClick="onRadioSelect"
+                        android:button="@drawable/background_radiobutton"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -186,6 +192,7 @@
                         android:layout_height="wrap_content"
                         android:text="North Up"
                         android:onClick="onRadioSelect"
+                        android:button="@drawable/background_radiobutton"
                         app:layout_constraintStart_toEndOf="@+id/radio_masc"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
                     <RadioButton
@@ -194,6 +201,7 @@
                         android:layout_height="wrap_content"
                         android:text="Course Up"
                         android:onClick="onRadioSelect"
+                        android:button="@drawable/background_radiobutton"
                         app:layout_constraintStart_toEndOf="@+id/radio_masc"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -242,6 +250,7 @@
                         android:layout_height="wrap_content"
                         android:text="Vetorial"
                         android:onClick="onRadioSelect"
+                        android:button="@drawable/background_radiobutton"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -251,6 +260,7 @@
                         android:layout_height="wrap_content"
                         android:text="Satélite"
                         android:onClick="onRadioSelect"
+                        android:button="@drawable/background_radiobutton"
                         app:layout_constraintStart_toEndOf="@+id/radio_masc"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
