--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="royal_blue">#4169E1</color>
+    <color name="blue_theme">#3540C3</color>
     <color name="light_blue">#ADD8E6</color>
+    <color name="red">#FF0000</color>
 </resources>
